# sockHTTP

./: LICENSE  README.md  pyproject.toml
src/sockHTTP/: Parser.py  Req.py  ReqCrafter.py  __init__.py  errorlogger.py  fuzzer.py  httpparser.py  httpreq.py
src/sockHTTP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sockHTTP_synntek0xe9/: crawlerconfig.py  fuzzer.py  httparser.py  httpreq.py
