[project]
name = "sockHTTP_synntek0xe9"
version = "0.0.1"
authors = [
  { name="synntek0xe9", email="synntek0xe9@gmail.comm" },
]
description = "A small package to help with (faster) HTTP(s) connection using raw sockets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/synntek0xe9/sockhttp"
Issues = "https://github.com/synntek0xe9/sockhttp/issues"